:arrow_up: Finalização do JS, incluindo as funções restantes para exibir a lista de tarefas na tela

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <h3>Aula JavaScript</h3>
         <div class="acao">
           <input type="checkbox" name="" id="">
+          <select name="" id="">
+            <option value="pendente">Pendente</option>
+            <option value="andamento">Andamento</option>
+            <option value="concluida"selected>Concluida</option>
+          </select>
+          <button class="remover">X</button>
         </div>
       </li>
     </ul>
@@ -45,5 +51,6 @@
     <span>Feito para praticar <strong>DOM</strong></span>
   </footer>
   <script src="scripts/script.js"></script>
+  <script src="scripts/teste.js"></script>
 </body>
 </html>
